apps/task-manager/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager
  labels:
    app: task-manager
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: task-manager
